--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>This is a header</header>
+    <p>Make sure you check your codes indentations</p>
     
 </body>
 </html>
